// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the ToastContainer Component correctly 1`] = `
<div
  className="sc-kAzzGY bOLSHM"
>
  <div
    className="sc-chPdSV eMmOGE sc-bwzfXH ksJcPo"
  >
    <div
      className="sc-kgoBCf btUZkU sc-bwzfXH hRHjBy"
      color="success"
    >
      <i
        className="material-icons  sc-ifAKCX cKhEfU"
        color="white"
        onClick={undefined}
        scale="l"
      >
        check_circle
      </i>
    </div>
    <div
      className="sc-kGXeez beVzcQ sc-bwzfXH klpUfB"
    >
      Text
    </div>
    <div
      className="sc-kpOJdX iioVns sc-bwzfXH kDqBmg"
    >
      <div
        className="sc-dxgOiQ itkEVu"
      >
        <i
          className="material-icons  sc-ifAKCX fpvHwA"
          color={undefined}
          onClick={[Function]}
          scale={undefined}
        >
          close
        </i>
      </div>
    </div>
  </div>
  <div
    className="sc-chPdSV eMmOGE sc-bwzfXH ksJcPo"
  >
    <div
      className="sc-kgoBCf jtBGQy sc-bwzfXH hRHjBy"
      color="error"
    >
      <i
        className="material-icons  sc-ifAKCX cKhEfU"
        color="white"
        onClick={undefined}
        scale="l"
      >
        error_outline
      </i>
    </div>
    <div
      className="sc-kGXeez beVzcQ sc-bwzfXH klpUfB"
    >
      Text
    </div>
    <div
      className="sc-kpOJdX iioVns sc-bwzfXH kDqBmg"
    >
      <div
        className="sc-dxgOiQ itkEVu"
      >
        <i
          className="material-icons  sc-ifAKCX fpvHwA"
          color={undefined}
          onClick={[Function]}
          scale={undefined}
        >
          close
        </i>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the ToastContainer Component correctly 2`] = `
<div
  className="sc-kAzzGY iHtRhf"
>
  <div
    className="sc-chPdSV eMmOGE sc-bwzfXH ksJcPo"
  >
    <div
      className="sc-kgoBCf btUZkU sc-bwzfXH hRHjBy"
      color="success"
    >
      <i
        className="material-icons  sc-ifAKCX cKhEfU"
        color="white"
        onClick={undefined}
        scale="l"
      >
        check_circle
      </i>
    </div>
    <div
      className="sc-kGXeez beVzcQ sc-bwzfXH klpUfB"
    >
      Text
    </div>
    <div
      className="sc-kpOJdX iioVns sc-bwzfXH kDqBmg"
    >
      <div
        className="sc-dxgOiQ itkEVu"
      >
        <i
          className="material-icons  sc-ifAKCX fpvHwA"
          color={undefined}
          onClick={[Function]}
          scale={undefined}
        >
          close
        </i>
      </div>
    </div>
  </div>
  <div
    className="sc-chPdSV eMmOGE sc-bwzfXH ksJcPo"
  >
    <div
      className="sc-kgoBCf jtBGQy sc-bwzfXH hRHjBy"
      color="error"
    >
      <i
        className="material-icons  sc-ifAKCX cKhEfU"
        color="white"
        onClick={undefined}
        scale="l"
      >
        error_outline
      </i>
    </div>
    <div
      className="sc-kGXeez beVzcQ sc-bwzfXH klpUfB"
    >
      Text
    </div>
    <div
      className="sc-kpOJdX iioVns sc-bwzfXH kDqBmg"
    >
      <div
        className="sc-dxgOiQ itkEVu"
      >
        <i
          className="material-icons  sc-ifAKCX fpvHwA"
          color={undefined}
          onClick={[Function]}
          scale={undefined}
        >
          close
        </i>
      </div>
    </div>
  </div>
</div>
`;
